# ce-cli

./: .gitignore  .prettierignore  Cargo.toml  Cross.toml  README.md  build.rs  build.sh  distribute.sh  platforms.json
app/: Cargo.toml  README.md  build.rs
app/assets/app_templates/react/custom_element/: View.cy.tsx  View.tsx  Widget.tsx  customElement.tsx  index.ts  util.spec.ts  widget.scss
app/assets/app_templates/react/shared_component/: SharedComponent.tsx  index.ts
app/assets/app_templates/shared_dep/: webpack.sharedDeps.js
app/assets/app_templates/vue/custom_element/: customElement.ts  index.ts  {{ name-camelcase }}View.cy.ts  {{ name-camelcase }}View.vue  {{ name-camelcase }}Widget.ce.vue
app/assets/app_templates/vue/shared_component/: index.ts
app/assets/base/: .env  .eslintrc.yml  cypress.config.js  package.json  tsconfig.prod.json  webpack.common.js
app/assets/common/: README.md  client-extension.yaml  cypress.config.js  jest.config.json  tsconfig.dev.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
app/assets/common/cypress/: mod.rs
app/assets/common/cypress/e2e/: starter.cy.ts
app/assets/common/cypress/support/: component-index.html
app/assets/common/src/: Liferay.d.ts
app/assets/common/util/: frameworkSettings.js  liferayExternals.js  util.js  workspaceConfig.js
app/assets/react/cypress/support/: component.ts
app/assets/react/util/: frameworkSettings.js
app/assets/vue/cypress/support/: component.ts
app/src/: assets_dir.rs  cli.rs  config.rs  error.rs  main.rs  version_check.rs
app/src/commands/: init.rs  mod.rs
app/src/commands/add/: custom_element.rs  mod.rs  shared_component.rs  shared_dependency.rs
app/src/commands/dev_deploy/: mod.rs
app/src/commands/object/: export.rs  import.rs  mod.rs
app/src/config_generators/: cet_configuration.rs  client_extension_yaml.rs  config.rs  eslintrc.rs  mod.rs  package_json.rs  typescript_config_json.rs  typescript_config_prod_json.rs
app/src/data_dir/: mod.rs
app/src/files/: mod.rs
app/src/files/app_templates/: mod.rs
app/src/files/app_templates/custom_element/: View.tsx  app.tsx  index.ts  mod.rs
app/src/files/configs/: ce-workspace.client-extension-config.json  package.json  webpack.dev.js
app/src/files/scripts/: mod.rs
app/src/liferay_client/: client.rs  client_options.rs  liferay_client_error.rs  mod.rs
app/src/liferay_client/custom_objects/: custom_object_endpoints.rs  mod.rs
app/src/liferay_client/list_type_api/: list_type.rs  list_type_endpoints.rs  mod.rs
app/src/liferay_client/object_admin_api/: mod.rs  object_admin.rs  object_admin_endpoints.rs
app/src/structs/: cet_configuration.rs  client_extension_yaml.rs  config.rs  eslintrc.rs  mod.rs  package_json.rs  shared_component.rs
app/src/templates/app_templates/custom_element/: View.tsx  Widget.tsx  customElement.tsx  mod.rs  util.spec.ts  util.ts
app/src/templates/configs/: .env  cypress.config.js  mod.rs  package.json
app/src/templates/configs/cypress/e2e/: mod.rs  util.ts
app/src/templates/configs/cypress/support/: mod.rs
app/src/templates/reference/: README.md
app/src/util/: mod.rs  zip.rs
app/tests/: init.rs
app/tests/common/: mod.rs
changelogs/: 0.1.11.md  0.1.5.md  0.2.0.md  0.2.1.md  0.2.5.md  0.2.6.md  0.4.0.md  0.4.1.md  0.4.2.md  (+7 more)
liferay_apis/batch/: Cargo.toml  response.yaml
liferay_apis/batch/docs/: DefaultApi.md  ImportTaskApi.md
liferay_apis/batch/src/: lib.rs
liferay_apis/batch/src/apis/: configuration.rs  default_api.rs  export_task_api.rs  import_task_api.rs  mod.rs
liferay_apis/batch/src/models/: export_task.rs  failed_item.rs  import_task.rs  mod.rs
liferay_apis/headless_common/: Cargo.toml
liferay_apis/headless_common/src/: lib.rs
liferay_apis/headless_common/src/api/: field_collection.rs  filter.rs  mod.rs  page_params.rs  sort.rs
liferay_apis/headless_common/src/models/: action.rs  facet.rs  facet_value.rs  mod.rs  page.rs
liferay_apis/list_type/: Cargo.toml
liferay_apis/list_type/.openapi-generator/: FILES
liferay_apis/list_type/docs/: ListTypeDefinition.md  PageListTypeEntry.md
liferay_apis/list_type/src/apis/: configuration.rs  default_api.rs  list_type_definition_api.rs  list_type_entry_api.rs  mod.rs
liferay_apis/list_type/src/models/: facet.rs  facet_value.rs  list_type_definition.rs  list_type_entry.rs  mod.rs  page_list_type_definition.rs  page_list_type_entry.rs
liferay_apis/object_admin/: Cargo.toml  README.md  schema.yaml
liferay_apis/object_admin/.openapi-generator/: FILES
liferay_apis/object_admin/docs/: DefaultApi.md  ObjectAction.md  ObjectActionApi.md  ObjectDefinition.md  ObjectDefinitionApi.md  ObjectField.md  ObjectFieldApi.md  ObjectFieldSetting.md  ObjectLayout.md  ObjectLayoutApi.md  ObjectLayoutBox.md  ObjectLayoutColumn.md  ObjectLayoutRow.md  ObjectLayoutTab.md  ObjectRelationship.md  ObjectRelationshipApi.md  ObjectValidationRule.md  ObjectValidationRuleApi.md  ObjectView.md  ObjectViewApi.md  ObjectViewColumn.md  ObjectViewFilterColumn.md  ObjectViewSortColumn.md  PageObjectAction.md  PageObjectDefinition.md  PageObjectField.md  PageObjectLayout.md  PageObjectRelationship.md  PageObjectValidationRule.md  PageObjectView.md  Status.md
liferay_apis/object_admin/src/apis/: configuration.rs  default_api.rs  mod.rs  object_action_api.rs  object_definition_api.rs  object_field_api.rs  object_layout_api.rs  object_relationship_api.rs  object_validation_rule_api.rs  object_view_api.rs
liferay_apis/object_admin/src/models/: creation_strategy.rs  facet.rs  facet_value.rs  mod.rs  object_action.rs  object_definition.rs  object_field.rs  object_field_setting.rs  object_layout.rs  object_layout_box.rs  object_layout_column.rs  object_layout_row.rs  object_layout_tab.rs  object_relationship.rs  object_validation_rule.rs  object_view.rs  object_view_column.rs  object_view_filter_column.rs  object_view_sort_column.rs  page_object_action.rs  page_object_definition.rs  page_object_field.rs  page_object_layout.rs  page_object_relationship.rs  page_object_validation_rule.rs  page_object_view.rs  status.rs
(+90 files in other folders)
