[package]
name = "ce-cli"
description = "A command line tool for building and managing Liferay remote app projects."
version = "0.1.0"
edition = "2021"
authors = ["Brian Heise <brian.heise@liferay.com>"]
rust-version = "1.66.1"
documentation = "TODO: github readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
