[package]
name = "ce-cli"
description = "A command line tool for building and managing Liferay remote app projects."
version = "0.1.0"
edition = "2021"
authors = ["Brian Heise <brian.heise@liferay.com>"]
rust-version = "1.66.1"
documentation = "https://github.com/bnheise/ce-cli/blob/main/README.md"
readme = "README.md"
homepage = "https://github.com/bnheise/ce-cli/"
repository = "https://github.com/rust-lang/cargo/"
license = "MIT OR Apache-2.0"
keywords = ["Liferay", "Client Extensions", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {  version = "4.1.4", default-features = false, features = ["derive", "std", "help"]}
