[package]
name = "ce-cli"
description = "A command line tool for building and managing Liferay remote app projects."
version = "0.3.0"
edition = "2021"
authors = ["Brian Heise <brian.heise@liferay.com>"]
rust-version = "1.68.0"
documentation = "https://github.com/bnheise/ce-cli/blob/main/README.md"
readme = "README.md"
homepage = "https://github.com/bnheise/ce-cli/"
repository = "https://github.com/bnheise/ce-cli/"
license = "MIT OR Apache-2.0"
keywords = ["Liferay", "client-extensions", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
[dependencies]
clap = { version = "4.1.4", default-features = false, features = ["derive", "std", "help", "usage", "suggestions"] }
colored = "2.0.0"
dialoguer = { version = "0.10.3", default-features = false } 
include_dir = { version = "0.7.3", default-features = false }
regex = { version = "1.7.1", default-features = false, features = ["std", "unicode-perl"] }
serde = { version = "1.0.152", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.91", default-features = false, features = ["std"] } 
serde_yaml = { version = "0.9.17", default-features = false } 
walkdir = { version = "2.3.2", default-features = false }
yaml-rust = { version = "0.4.5", default-features = false } 
zip = { version = "0.6.3", default-features = false, features = ["deflate"] } 
lazy_static = "1.4.0"
dotenv = "0.15.0"
object_admin = { path = "../liferay_apis/object_admin/" }
headless_admin_list_type = { path = "../liferay_apis/list_type/" }
batch_api = { path = "../liferay_apis/batch/" }
thiserror = "1.0.39"
