[package]
name = "batch_api"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
description = "A Java client JAR is available for use with the group ID 'com.liferay', artifact ID 'com.liferay.headless.batch.engine.client', and version '1.0.11'."
license = "Apache 2.0"
edition = "2021"
rust-version = "1.68.0"

[dependencies]
serde = "1.0.152"
serde_derive = "1.0.155"
serde_json = "1.0.91"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
reqwest = { version = "0.11.14", default-features = false, features = ["blocking", "json", "rustls-tls"]}
