[package]
name = "headless_common"
version = "0.1.0"
edition = "2021"
description = "Shared types useful for making requests to various Liferay headless APIs"
license = "MIT OR Apache-2.0"
keywords = ["Liferay", "headless apis", "api client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
convert_case = "0.6.0"
field_types = "1.1.0"
http = "0.2.9"
reqwest = { version = "0.11.14", default-features = false, features = ["blocking", "json", "rustls-tls"]}
serde = { version = "1.0.156", default-features = true }
serde_derive = { version = "1.0.156", default-features = true }
serde_json = { version = "1.0.94", default-features = true }
url = { version = "2.3.1", default-features = false }
url_serde = "0.2.0"
uuid ={ version = "1.3.0", default-features = false }
